# wagtail-2fa

./: .pre-commit-config.yaml  Makefile  pyproject.toml
sandbox/sandbox/: settings.py  urls.py
sandbox/sandbox/apps/home/: models.py
tests/: conftest.py  test_views.py
wagtail_2fa/: views.py
